# artea

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  images.yml  kind-e2e.yml
devpi/: Dockerfile  README.md  ensure_index.py  entrypoint.sh
devpi/artea_devpi_policy/: pyproject.toml
devpi/artea_devpi_policy/src/artea_devpi_policy/: __init__.py  main.py
devpi/tests/: test_artea_devpi_policy.py  test_entrypoint.py  test_min_age_vectors.py  test_osv_vectors.py
docs/: ARCHITECTURE.md  policy-schema.md  refactoring-plan.md
docs/adr/: 0001-gitea-control-plane.md  0002-sidecar-pull-through-proxies.md  0003-artifacts-in-gitea-caches-disposable.md  0004-upstream-isolation-no-fork.md  0005-single-org-namespace.md  0006-policy-as-code.md  0007-unified-policy-schema.md  0009-gitea-pkce-patch.md  0010-gitea-oauth-signup-claim-binding.md  README.md
e2e/: env.sh  lib.sh  run.sh
gateway/: README.md  nginx.conf  nginx.conf.template
gitea/: .gitignore  README.md  UPSTREAM  app.ini  app.ini.template  build-image.sh
policy/: CLIENT-SETUP.md.template  npm-rules.yaml  policy.toml  pypi-constraints.txt  setup.sh.template  upstream-policy.yaml
policy-sync/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
scripts/: Dockerfile.bootstrap  bootstrap.sh  check-chart-copies.sh  k8s-e2e.sh  perf-benchmark.py  render-chart-file.sh  render-configs.sh  render-nginx.sh  smoke.sh
verdaccio/: README.md  config.yaml  config.yaml.template
(+113 files in other folders)
